first shot at project (mobileview and desktop view)

--- a/FrontEndMentorsChallenges/base-apparel-coming-soon-master/index.html
+++ b/FrontEndMentorsChallenges/base-apparel-coming-soon-master/index.html
@@ -8,52 +8,45 @@
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
   <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
 
-  <div class="container">
+    <div class="container">
 
-    <header class="header">
-        <div class="logo"></div>
-    </header> 
-
-    <div class="image"></div> 
-
-    <section class="section">
-        <div class="title">
-          <span class="upper">We're</span>
-          <span class="lower">coming soon</span> 
+        <div class="header">
+          <img src="./images/logo.svg
+          " alt="">
         </div>
+        <div class="image"></div>
 
-        <div class="text">
-            Hello fellow shoppers! We're currently building our new fashion store. 
-            Add your email below to stay up-to-date with announcements and our launch deals.
-        </div>
-
-        <form action="" class="form" id="form">
+        <div class="section">
+          <div class="title">
+            <span class="upper">We're</span>
+            <span class="lower">coming soon</span> 
+          </div>
+  
+          <div class="text">
+              Hello fellow shoppers! We're currently building our new fashion store. 
+              Add your email below to stay up-to-date with announcements and our launch deals.
+          </div>
+          <form action="" class="form" id="form">
 
             <input type="text" required class="formInput" placeholder="Email Address">
 
             <button id="btn" type="submit"> 
                 <img src="./images/icon-arrow.svg" alt="">
             </button>
+          </form>
+          <small>Please provide a valid email</small>
+        </div>
+        <footer class="footer">
+          <p class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="https://github.com/Micah-Shallom">Micah Shallom</a>.
+          </p>
+        </footer>
+    </div>
 
-        </form>
-          <small>Enter Valid Email
-            <img src="./images/icon-error.svg" alt="">
-          </small>
-    </section>
     
-    <footer class="footer">
-      <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://github.com/Micah-Shallom">Micah Shallom</a>.
-      </p>
-    </footer>
-
-  </div>
-
-  <script src="script.js"></script>
+  
 </body>
-</html>
