added form validation

--- a/FrontEndMentorsChallenges/base-apparel-coming-soon-master/index.html
+++ b/FrontEndMentorsChallenges/base-apparel-coming-soon-master/index.html
@@ -32,12 +32,14 @@
           <form action="" class="form" id="form">
 
             <input type="text" required class="formInput" placeholder="Email Address">
+            <div class="sign"></div>
 
             <button id="btn" type="submit"> 
                 <img src="./images/icon-arrow.svg" alt="">
             </button>
+
           </form>
-          <small>Please provide a valid email</small>
+          <small class="small">Please provide a valid email</small>
         </div>
         <footer class="footer">
           <p class="attribution">
@@ -47,6 +49,7 @@
         </footer>
     </div>
 
-    
+    <script src="./script.js"></script>
   
 </body>
+</html>
