fixing minor git issues

--- a/FrontEndMentorsChallenges/intro-component-with-signup-form-master/index.html
+++ b/FrontEndMentorsChallenges/intro-component-with-signup-form-master/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="subtitle">
         <h3>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-          but understanding how developers think is invaluable. </h3>
+          but also understanding how developers think is invaluable. </h3>
       </div>
     </div>
 
